--- a/statinfercp1.Rmd
+++ b/statinfercp1.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ##Overview: 
-The purpose of this experiment is to investigate the exponential distribution in R, and to compare it with the Central Limit Theorem. The exponential distribution can be simulated in R with rexp(n, lambda) where lambda is the rate parameter and the mean of exponential distribution is 1/lambda. This experiment will investigate the distribution of averages of 40 exponentials using a thousand simulations.
+The purpose of this experiment is to investigate the exponential distribution in R, and to compare it with the Central Limit Theorem. The exponential distribution can be simulated in R with rexp(n, lambda) where lambda is the rate parameter and the mean of exponential distribution is 1/lambda. (Lambda will be set to 0.2 for this simulation.) This experiment will use 1000 simulations of the averages of 40 exponentials to investigate the distribution.
 
 ##Simulations:
 Illustrate via simulation and associated explanatory text the properties of the distribution of the mean of 40 exponentials.  You should
@@ -20,34 +20,69 @@ Include English explanations of the simulations you ran, with the accompanying R
 
 ##Sample Mean versus Theoretical Mean: Include figures with titles. In the figures, highlight the means you are comparing. Include text that explains the figures and what is shown on them, and provides appropriate numbers.
 ```{r}
-library(ggplot2)
-
 set.seed(1234)
 
 lambda = 0.2
+numofsims = 1000
 mns = NULL
-for (i in 1:1000)
+for (i in 1:numofsims)
     mns = c(mns, mean(rexp(40, lambda)))
-ggplot() + aes(mns) + geom_histogram(binwidth = 1)
 
-hist(mns)
+hist(mns, freq = FALSE, main = "Distribution of the Mean of 40 Exponentials")
 lines(density(mns))
 abline(v = 1/lambda, col = "red")
 ```
 
+#### Figure 1 - Distribution of the Mean of 40 Exponentials  
+
+The above figure shows the distribution of one thousand simulations of the mean value for 40 exponentials.  
+
+The theoretical mean of the exponential distribution is given as $1/lambda$. $Lambda$ was set to 0.2, so the theoretical mean is $\beta = 1/\lambda = 1/0.2 = 5$. This is shown in Figure 1 as a red vertical line at $X = 5$.
+
+It can be seen that the theoretical mean coincides with the sample mean, at least for a sample of 1000 simulations.
+
+***
+
 ##Sample Variance versus Theoretical Variance: Include figures (output from R) with titles. Highlight the variances you are comparing. Include text that explains your understanding of the differences of the variances.
+```{r}
+set.seed(1234)
+
+lambda = 0.2
+numofsims = 1000
+sampvar = NULL
+for (i in 1:numofsims)
+    sampvar = c(sampvar, var(rexp(40, lambda)))
+
+ylimits = range(density(sampvar)$y)
+hist(sampvar, freq = FALSE, main = "Distribution of the Variance of 40 Exponentials", ylim = ylimits)
+lines(density(sampvar))
+abline(v = 1/lambda^2, col = "red")
+```
+
+#### Figure 2 - Distribution of the Variance of 40 Exponentials  
+
+The above figure shows the distribution of one thousand simulations of the variance value for 40 exponentials.  
+
+The theoretical variance of the exponential distribution is given as $1/\lambda^2$. $\lambda$ was set to 0.2, so the theoretical variance is $1/\lambda^2 = 1/0.2^2 = 25$. This is shown in Figure 2 as a red vertical line at $X = 25$.
+
+It can be seen that the theoretical variance coincides with the sample variance, at least for a sample of 1000 simulations.
+
+***
 
 ##Distribution: Via figures and text, explain how one can tell the distribution is approximately normal.
 
-
 ```{r}
-summary(cars)
+library(ggplot2)
+nosim <- 1000
+cfunc <- function(x, n) sqrt(n) * (mean(x) - 5) / 5
+dat <- data.frame(
+  x = c(apply(matrix(rexp(nosim * 10, lambda), nosim), 1, cfunc, 10),
+        apply(matrix(rexp(nosim * 20, lambda), nosim), 1, cfunc, 20),
+        apply(matrix(rexp(nosim * 40, lambda), nosim), 1, cfunc, 40)
+        ),
+  size = factor(rep(c(10, 20, 40), rep(nosim, 3))))
+g <- ggplot(dat, aes(x = x, fill = size)) + geom_histogram(colour = "black", binwidth = 0.2, aes(y = ..density..)) 
+g <- g + stat_function(fun = dnorm, size = 1)
+g + facet_grid(size ~ .)
 ```
 
-You can also embed plots, for example:
-
-```{r, echo=FALSE}
-plot(cars)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
