--- a/statinfercp1.Rmd
+++ b/statinfercp1.Rmd
@@ -2,53 +2,61 @@
 title: "Simulation and Basic Inferential Data Analysis"
 author: "Kent Mok"
 date: "September 9, 2015"
-output: html_document
+output: pdf_document
 ---
 
 ##Overview: 
-The purpose of this experiment is to investigate the exponential distribution in R, and to compare it with the Central Limit Theorem. The exponential distribution can be simulated in R with rexp(n, lambda) where lambda is the rate parameter and the mean of exponential distribution is 1/lambda. (Lambda will be set to 0.2 for this simulation.) This experiment will use 1000 simulations of the averages of 40 exponentials to investigate the distribution.
+The purpose of this experiment is to investigate the exponential distribution 
+in R, and to compare it with the Central Limit Theorem. The exponential 
+distribution can be simulated in R with rexp(n, lambda) where lambda is the 
+rate parameter and the mean of exponential distribution is 1/lambda. (Lambda 
+will be set to 0.2 for this simulation.) This experiment will use 1000 
+simulations of the averages of 40 exponentials to investigate the distribution.
 
-##Simulations:
-Illustrate via simulation and associated explanatory text the properties of the distribution of the mean of 40 exponentials.  You should
+The theoretical mean of the exponential distribution is $\beta = 1/\lambda$. 
+For $\lambda = 0.2$, $\beta = 5$. The theoretical variance of the exponential 
+distribution is given as $1/\lambda^2$. For $\lambda = 0.2$, the theoretical
+variance is $1/\lambda^2 = 1/0.2^2 = 25$.
 
-1. Show the sample mean and compare it to the theoretical mean of the distribution.
+##Simulation:
+The simulation takes 40 samples of the exponential distribution 1000 times. 
+This creates a data frame with 1000 variables with 40 observations each. The 
+mean and variance of each variable can be taken to analyze the distribution of
+the mean and variance for the exponential distribution. 
 
-2. Show how variable the sample is (via variance) and compare it to the theoretical variance of the distribution.
-
-3. Show that the distribution is approximately normal.
-Include English explanations of the simulations you ran, with the accompanying R code. Your explanations should make clear what the R code accomplishes.
-
-##Sample Mean versus Theoretical Mean: Include figures with titles. In the figures, highlight the means you are comparing. Include text that explains the figures and what is shown on them, and provides appropriate numbers.
 ```{r}
 set.seed(1234)
 
 lambda = 0.2
-numofsims = 1000
-mns = NULL
-for (i in 1:numofsims)
-    mns = c(mns, mean(rexp(40, lambda)))
-
-hist(mns, freq = FALSE, main = "Distribution of the Mean of 40 Exponentials")
-lines(density(mns))
-abline(v = 1/lambda, col = "red")
+expdf <- data.frame(replicate(1000, rexp(40, lambda)))
 ```
 
-#### Figure 1 - Distribution of the Mean of 40 Exponentials  
+##Sample Mean versus Theoretical Mean:
+```{r fig.height=3, fig.width=6}
 
-The above figure shows the distribution of one thousand simulations of the mean value for 40 exponentials.  
-
-The theoretical mean of the exponential distribution is given as $1/lambda$. $Lambda$ was set to 0.2, so the theoretical mean is $\beta = 1/\lambda = 1/0.2 = 5$. This is shown in Figure 1 as a red vertical line at $X = 5$.
-
-It can be seen that the theoretical mean coincides with the sample mean, at least for a sample of 1000 simulations.
-
-***
-
-##Sample Variance versus Theoretical Variance: Include figures (output from R) with titles. Highlight the variances you are comparing. Include text that explains your understanding of the differences of the variances.
-```{r}
-set.seed(1234)
-
-lambda = 0.2
 numofsims = 1000
+mns = apply(expdf, 2, mean)  # Take mean value of each of the 40 samples
+
+samplemean = mean(mns)  # Average of the 1000 means
+
+hist(mns, freq = FALSE, main = "Distribution of the Mean of 40 Exponentials",
+     xlab = "X")
+lines(density(mns))  # Add smoothed curve on top of histogram
+abline(v = samplemean, col = "green")  # Add vertical line for sample mean
+abline(v = 1/lambda, col = "red")  # Add vertical line for theoretical mean
+text(x = samplemean, y = 0.2, labels = round(samplemean,2))
+```
+
+The above figure shows the distribution of the thousand simulated means for 40
+exponentials. The sample mean is shown as a green vertical line at the sample
+mean of `r round(samplemean,3)`. The theoretical mean is also shown as a red vertical line at 
+$X=5$. It can be seen that the theoretical mean coincides with the sample mean,
+at least for a sample of 1000 simulations.
+
+##Sample Variance versus Theoretical Variance:
+```{r}
+sampvar = var(mns)
+print(sampvar)
 sampvar = NULL
 for (i in 1:numofsims)
     sampvar = c(sampvar, var(rexp(40, lambda)))
@@ -59,13 +67,10 @@ lines(density(sampvar))
 abline(v = 1/lambda^2, col = "red")
 ```
 
-#### Figure 2 - Distribution of the Variance of 40 Exponentials  
-
-The above figure shows the distribution of one thousand simulations of the variance value for 40 exponentials.  
-
-The theoretical variance of the exponential distribution is given as $1/\lambda^2$. $\lambda$ was set to 0.2, so the theoretical variance is $1/\lambda^2 = 1/0.2^2 = 25$. This is shown in Figure 2 as a red vertical line at $X = 25$.
-
-It can be seen that the theoretical variance coincides with the sample variance, at least for a sample of 1000 simulations.
+The above figure shows the distribution of one thousand simulations of the 
+variance value for 40 exponentials. The theoretical variance is shown as a red 
+vertical line at $X = 25$. It can be seen that the sample variance coincides 
+with the theoretical variance, at least for a sample of 1000 simulations.
 
 ***
 
